# project-manager-v2

./: .env  .gitignore  README.md  SPRINT_14_REPORT.md  SPRINT_15_REPORT.md  SPRINT_16_REPORT.md  SPRINT_21_REPORT.md  database_schema.md  docker-compose.yml
backend/: .env  .env.test  Dockerfile  MIGRATIONS.md  SPRINT_17_REPORT.md  SPRINT_20_REPORT.md  alembic.ini  check_users.py  docker-compose.yml  generate_openapi.py  generate_postman.py  pyproject.toml  test_rbac.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_audit_logs_table.py  9c349149936d_initial_migration_create_users_and_.py  d92223d91a68_create_notifications_table.py  d92223d91a68_initial_migration_create_users_and_.py
backend/docs/: README.md  openapi.json  postman_collection.json
backend/nginx/: default.conf
backend/scripts/: reset_and_seed.py  seed.py
backend/src/project_management_api/application/: schemas.py
backend/src/project_management_api/application/services/: audit_service.py  notification_service.py  project_workflow_service.py  quality_gates.py
backend/src/project_management_api/domain/: models.py
backend/src/project_management_api/infrastructure/api/: dependencies.py  main.py  middleware.py  security.py
backend/src/project_management_api/infrastructure/db/: database.py
backend/src/project_management_api/infrastructure/repositories/: audit_log_repository.py  document_repository.py  notification_repository.py  project_repository.py  (+2 more)
backend/tests/: conftest.py  test_documents_api.py  test_projects_api.py  test_tasks_api.py  test_workflow_api.py
(+39 files in other folders)
