# backend/pyproject.toml
[tool.poetry]
name = "project-management-api"
version = "0.1.0"
description = "Backend for the Project Management System."
authors = ["TRAE AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^2.0.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
aiosqlite = "^0.19.0"